CWNew/force-app/main/default/objects/CW_Reservation__c/CW_Reservation__c.object-meta.xml
<CustomObject>
    <label>Reservation</label>
    <nameField>
        <displayFormat>R-{MM}-{DD}-{YYYY}-{0}</displayFormat>
        <label>Reservation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>