CWNew/force-app/main/default/objects/CW_Reservation__c/fields/CW_Address__c.field-meta.xml
<CustomField>
    <fullName>CW_Address__c</fullName>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>