CWNew/force-app/main/default/objects/CW_Reservation__c/fields/CW_Phone__c.field-meta.xml
<CustomField>
    <fullName>CW_Phone__c</fullName>
    <label>Phone</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>