CWNew/force-app/main/default/objects/CW_Reservation__c/fields/CW_Seat_Numbers__c.field-meta.xml
<CustomField>
    <fullName>CW_Seat_Numbers__c</fullName>
    <label>Seat Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>