CWNew/force-app/main/default/objects/CW_Reservation__c/fields/CW_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>CW_Total_Amount__c</fullName>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>