CWNew/force-app/main/default/objects/CW_Reservation__c/fields/CW_Trip__c.field-meta.xml
<CustomField>
    <fullName>CW_Trip__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Trip</label>
    <referenceTo>CW_Trip__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>